--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
